# EndecTools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
endectools/: __init__.py  cli.py  core.py  vault.py
endectools/utils/: crypto.py  crypto_stream.py  hashutils.py  vault.py
tests/: cli.py  core.py  pytest.ini  test_cli.py  test_core.py  test_endec.py
