[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EndecTools"
version = "1.0.0"
description = "Local-first encryption / decryption utilities"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "CMG Solutions", email = "cmg.solutions.a@gmail.com" }]
homepage = "https://github.com/CMGsolutions/EndecTools"
repository = "https://github.com/CMGsolutions/EndecTools"
"requires-python" = ">=3.9"
dependencies = [
  "click>=8.1",
  "cryptography>=42",
  "zstandard>=0.21",
  "tqdm>=4.65"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "flake8",
  "black"
]

[project.scripts]
endec = "endectools.cli:cli"