[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EndecTools"
version = "1.1.0"
description = "Local-first encryption / decryption utilities"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "CMG Solutions", email = "cmg.solutions.a@gmail.com" }]
"requires-python" = ">=3.9"
dependencies = [
  "click>=8.1",
  "cryptography>=42",
  "zstandard>=0.21",
  "tqdm>=4.65"
]

[project.urls]
Homepage = "https://github.com/YourUser/EndecTools"
Repository = "https://github.com/YourUser/EndecTools"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "flake8",
  "black"
]

[project.scripts]
endec = "endectools.cli:cli"

[tool.setuptools]
packages = ["endectools"]